Formatted all the images and pages for each page. Changed so that book doesn't shift until certain width. Fixed input tags formatting.

--- a/client/styles/temp-style.css
+++ b/client/styles/temp-style.css
@@ -1,7 +1,19 @@
 body {
+  background: url(../assets/cartoon-wallpaper.jpg) no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  background-color: f6c582;
   margin: 0;
-  background-color: #ebebeb;
   font-family: TravelingTypewriter, sans-serif;
+/*  background-color: #ebebeb; /*grey background
+  background-color: #cd3540; red background
+  background-color: #2e3775; blue background
+  background-color: #3cb675; green background
+  background-color: #d4c800; yellow background (personally I don't like this color)
+  background-color: #52345c; purple background
+  background-color: #e34e03; orange background*/
 }
 .header {
   /*background-color: #d6c6a7;*/
@@ -23,6 +35,9 @@ body {
 .background {
   text-align: center;
   margin: 0 auto;
+  z-index: 1;
+  display: flex;
+
 }
 
 #book-background-image {
@@ -54,6 +69,45 @@ body {
   margin: 0 auto;
 }
 
+.left-page-text {
+  z-index: 1000;
+  width:313px;
+  height:500px;
+  position: absolute;
+  top: 295px;
+  left: 320px;
+}
+
+.left-page-image {
+  z-index: 1000;
+  text-align: center;
+  position: absolute;
+  left: 313px;
+  top: 500px;
+}
+
+.page-image {
+  width: 300px;
+}
+
+.right-page-text {
+  z-index: 1000;
+  width: 313px;
+  height: 500px;
+  position: absolute;
+  top: 300px;
+  left: 679px;
+}
+
+.right-page-image {
+  z-index: 1000;
+  text-align: center;
+  position: absolute;
+  left: 680px;
+  top: 550px;
+}
+
+
 #button-preview {
   border-style: none;
   color: white;
@@ -61,6 +115,7 @@ body {
   font-size: 18px;
   padding: 10px;
   font-family: TravelingTypewriter, sans-serif;
+  margin-bottom: 30px;
 }
 
 #button-invite {
@@ -75,7 +130,6 @@ body {
 #webcam-features {
   margin: 0 auto;
   text-align: center;
-  line-height: 500%;
 }
 
 #invite-to {
@@ -109,4 +163,13 @@ body {
   font-family: TravelingTypewriter, sans-serif;  
   font-size: 18px;
   text-align: center;
+}
+
+.local-webcam > video{
+  width: 350px;
+}
+
+.remote-webcam > video {
+  width: 350px;
+  float: left;
 }
